build: cors config 수정
- AllowedOrigin 설정 수정